# docorcpty

./: .coveragerc  .dockerignore  .env.sample  .gitignore  DOCKER_DEV.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SETUP.md  container_orchestrator_prd.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  preprd.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.obsidian/: workspace.json
configs/: orchestrator.json  templates.json
configs/containers/: ascii-games.json  node-dev.json  python-dev.json  system-monitor.json
dashboard/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
dashboard/public/: index.html  manifest.json
dashboard/src/: App.js
dashboard/src/components/: ContainerGrid.js  Monitoring.js  Terminal.js
dashboard/src/services/: api.js
orchestrator/: __init__.py
orchestrator/api/: __init__.py  app.py  websocket.py
orchestrator/api/routes/: automation.py  containers.py  sessions.py
orchestrator/core/: config_loader.py  container_manager.py  orchestrator.py  session_manager.py
orchestrator/terminal/: __init__.py  io_manager.py  pexpect_handler.py  pty_handler.py
orchestrator/utils/: __init__.py  logger.py  monitoring.py
tests/: __init__.py  conftest.py
tests/unit/api/: test_app.py
tests/unit/core/: test_config_loader.py  test_container_manager.py  test_session_manager.py
